# WeeklyEmergencyMeeting

./: Cargo.toml  README.md  config.ini
.github/: dependabot.yml
src/: announce.rs  lib.rs  main.rs  utils.rs
src/commands/: change_message.rs  mod.rs  show_message.rs
src/store/: message_store.rs  mod.rs
